Fix appveyor compilation

--- a/appveyor64.yml
+++ b/appveyor64.yml
@@ -46,7 +46,7 @@ before_build:
     vcpkg install sdl2-image[libjpeg-turbo]:x64-windows
     git submodule update --init --recursive
     echo Running cmake ..
-    cmake -G "Visual Studio 14 2015 Win64" -DVCPKG_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=%P% -DHAVE_SDL=true -DPACKAGE_VCREDIST=true
+    cmake -G "Visual Studio 14 2015 Win64" -DVCPKG_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=%P% -DHAVE_SDL=true -DPACKAGE_VCREDIST=true %APPVEYOR_BUILD_FOLDER%
 
 build:
   project: ALL_BUILD.vcxproj
