--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ before_build:
     vcpkg install sdl2-image[libjpeg-turbo]:x86-windows
     git submodule update --init --recursive
     echo Running cmake ..
-    cmake -G "Visual Studio 14 2015" -DVCPKG_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=%P% -DHAVE_SDL=true -DPACKAGE_VCREDIST=true
+    cmake -G "Visual Studio 14 2015" -DVCPKG_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=%P% -DHAVE_SDL=true -DPACKAGE_VCREDIST=true %APPVEYOR_BUILD_FOLDER%
 
 build:
   project: ALL_BUILD.vcxproj
